--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-list-endpoints": "^7.1.0",
+    "express-list-endpoints": "^7.1.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "morgan": "^1.10.0",
+    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "qrcode": "^1.5.4",
